# ipc

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/services/: plag_service.py
backend/app/utils/: pdf_handler.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/DragDropFile/: DragDropFile.css  DragDropFile.jsx
frontend/src/layout/: Footer.jsx  index.jsx
frontend/src/lib/: axios.js
frontend/src/routes/: MainRoutes.jsx  index.js
frontend/src/slices/: document.js
frontend/src/store/: index.js  root-reducer.js
frontend/src/thunks/: contribution.js
frontend/src/views/: index.jsx
frontend/src/views/contribute/: index.jsx
frontend/src/views/contribute/components/: AuthorForm.jsx  Review.jsx  UploadForm.jsx
