[tool.poetry]
name = "backend"
version = "0.1.0"
description = "NLP tubes backend"
authors = ["hdmonster"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.68.0,<0.69.0"
pydantic = ">=1.8.0,<2.0.0"
uvicorn = ">=0.15.0,<0.16.0"
mysqlclient = "^2.2.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
